modal fixes on mobile

--- a/assets/scss/base/_typography.scss
+++ b/assets/scss/base/_typography.scss
@@ -49,7 +49,7 @@ h2,
   letter-spacing: rem(2);
   font-size: 1.625em; // 1.625x body copy size = 26px
   line-height: 1.15384615; // 30px / 26px
-  color: $orange;
+  color: $green;
 }
 
 @media (min-width: 43.75em) {
